--- a/sass/organisms/_header.sass
+++ b/sass/organisms/_header.sass
@@ -13,7 +13,7 @@ header
 
         
 
-    min-height: 470px
+    height: 470px
     background: 
         image: url('../images/bg-topo2.jpeg')
         position: top center
