--- a/sass/organisms/_header.sass
+++ b/sass/organisms/_header.sass
@@ -102,6 +102,8 @@ header
         clear: both
         margin-top: 160px
         font-size: 70px
+        .name-to
+            display: inline-block
 
     h3
         color: $white
