create page contact

--- a/sass/templates/_home.sass
+++ b/sass/templates/_home.sass
@@ -1,1 +1,10 @@
 @import ../organisms/sobre
+header
+    height: 470px
+    background: 
+        image: url('../images/bg-topo2.jpeg')
+        position: top center
+        repeat: no-repeat
+        attachment: fixed
+        size: cover
+        position-y: -100px
