--- a/sass/organisms/_header.sass
+++ b/sass/organisms/_header.sass
@@ -10,17 +10,7 @@ header
         width: 100%
         height: 10px
         +gradient(90deg, $light-green, $light-blue)
-
-        
-
-    height: 470px
-    background: 
-        image: url('../images/bg-topo2.jpeg')
-        position: top center
-        repeat: no-repeat
-        attachment: fixed
-        size: cover
-        position-y: -100px
+    
     +breakpoint($tablet)
         background: 
             image: url('../images/bg-topo2.jpeg')
@@ -42,10 +32,19 @@ header
             float: right
             text-align: center
             justify-content: center
-        .nav-link:hover
+        .nav-link
             padding-bottom: 5px
-            border-bottom: solid 1px $white
-            transition: padding-bottom 0ms linear
+            &:hover
+                &:after
+                    width: 100%
+        .nav-link:after
+            content: ""
+            display: table
+            margin: 0 auto
+            height: 2px
+            width: 0%
+            background-color: $white
+            +transition(0.5s)
 
         .navbar-toggle
             color: $white
