add image top equipe

--- a/sass/templates/_equipe.sass
+++ b/sass/templates/_equipe.sass
@@ -1,9 +1,24 @@
 header
     height: 470px
     background: 
-        image: url('../images/bg-topo2.jpeg')
+        image: url('../images/bg-topo-equipe.jpeg')
         position: top center
         repeat: no-repeat
         attachment: fixed
         size: cover
         position-y: -100px
+
+h3
+    transition-property: background-color, max-width
+    transition-duration: .5s
+    transition-timing-function: linear
+    transition-delay: 1.2s
+    max-width: 100%
+h3.h3-bg
+    background-color: #000000b4
+    padding: 5px 20px
+    max-width: 500px
+    margin: 0 auto
+    white-space: nowrap
+    font-size: 1.5rem
+    border-radius: 15px
